[project]
name = "supply-chain-intel"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["pipelines"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "T201",   # allow print() in CLI
  "B023",   # allow function def in loop (Airflow DAG pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["pipelines"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
